# pyramid_openapi3

./: .aspell.en.pws  .coveragerc  .envrc  .flake8  .gitignore  .installed  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  RELEASE.md  demo.py  demo.yaml  inject_minimal_openapi-core.sh  pyproject.toml  pyproject_py37.toml  pytest.ini  setup.cfg  setup.py  shell.nix  shell_py37.nix  tox.ini
.circleci/: config.yml
.github/: dependabot.yml  zizmor.yml
.github/actions/nix-shell/: action.yml
.github/workflows/: ci.yml  release.yml
.mypy/: type_coverage.py
examples/pserve_ini_app/: app.py  openapi.yaml  server.ini
examples/singlefile/: README.md  app.py
examples/splitfile/: README.md  app.py  tests.py
examples/splitfile/spec/: openapi.yaml  paths.yaml  responses.yaml  schemas.yaml
examples/todoapp/: README.md  app.py  openapi.yaml  tests.py
py310/: pyproject.toml
py38/: pyproject.toml
py39/: pyproject.toml
pyramid_openapi3/: __init__.py  check_openapi_responses.py  exceptions.py  tween.py  wrappers.py
pyramid_openapi3/static/: index.html
pyramid_openapi3/tests/: __init__.py  test_add_deserializer.py  test_add_exception_views.py  test_add_formatter.py  test_add_unmarshaller.py  test_app_construction.py  test_contenttypes.py  test_extract_error.py  test_extract_errors.py  test_openapi_responses.py  test_path_parameters.py  test_permissions.py  test_routes.py  test_validation.py  test_views.py  test_wrappers.py
tests/: conftest.py  test_add_formatter.py  test_views.py  test_wrappers.py
