[tool.poetry]
name = "pyramid_openapi3"
version = "0.20.1"
description = "Pyramid addon for OpenAPI3 validation of requests and responses."
readme = "README.md"
authors = [
  "Neyts Zupan",
  "Domen Kozar"
]
license = "MIT"
repository = "https://github.com/Pylons/pyramid_openapi3"
keywords = ["pyramid", "openapi3", "openapi", "rest", "restful"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  { include = "pyramid_openapi3", from = "." },
]
exclude = ["pyramid_openapi3/tests/"]


[tool.poetry.dependencies]
python = "^3.10"

openapi-core = ">=0.19.1"
pyramid = ">=1.10.7"


[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
codespell = "*"
coverage = "*"
docutils = "*"
flake8 = "*"
flake8-assertive = "*"
flake8-blind-except = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-deprecated = "*"
flake8-docstrings = "*"
flake8-ensure-ascii = "*"
flake8-plone-hasattr = "*"
flake8-print = "*"
flake8-self = "*"
flake8-super-call = "*"
flake8-tuple = "*"
isort = "*"
mccabe = "*"
more-itertools = "*"
mypy = "*"
pdbpp = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pytest = "*"
pytest-cov = "*"
pytest-instafail = "*"
pytest-randomly = "*"
pytest-socket = "*"
pyupgrade = "*"
typecov = "*"
types-pytest-lazy-fixture = "*"
webtest = "*"
yamllint = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.autoflake]
remove-all-unused-imports = true
in-place = true
recursive = true


[tool.isort]
atomic=true
force_alphabetical_sort=true
force_single_line=true
line_length=88
profile="black"


[tool.mypy]
follow_imports = "silent"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
linecount_report = "./typecov"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "openapi_core.*",
  "openapi_spec_validator.*",
  "openapi_schema_validator.*",
  "hupper.*",
  "pyramid.*",
  "pytest",
  "webob.multidict.*",
  "webtest.*",
  "zope.interface.*",

]
