[project]
name = "pyramid_openapi3"
version = "0.21.0"
description = "Pyramid addon for OpenAPI3 validation of requests and responses."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Neyts Zupan" },
  { name = "Domen Kozar" },
]
keywords = ["pyramid", "openapi3", "openapi", "rest", "restful"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
  "openapi-core>=0.19.1,<0.20",
  "pyramid>=1.10.7",
]

[project.urls]
Repository = "https://github.com/Pylons/pyramid_openapi3"

[dependency-groups]
dev = [
  "autoflake",
  "black",
  "codespell",
  "coverage",
  "docutils",
  "flake8",
  "flake8-assertive",
  "flake8-blind-except",
  "flake8-bugbear",
  "flake8-builtins",
  "flake8-comprehensions",
  "flake8-debugger",
  "flake8-deprecated",
  "flake8-docstrings",
  "flake8-ensure-ascii",
  "flake8-plone-hasattr",
  "flake8-print",
  "flake8-self",
  "flake8-super-call",
  "flake8-tuple",
  "isort",
  "mccabe",
  "more-itertools",
  "mypy",
  "pdbpp",
  "pre-commit",
  "pre-commit-hooks",
  "pytest",
  "pytest-cov",
  "pytest-instafail",
  "pytest-randomly",
  "pytest-socket",
  "pyupgrade",
  "typecov",
  "types-pytest-lazy-fixture",
  "webtest",
  "yamllint",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pyramid_openapi3"
module-root = ""
source-exclude = ["pyramid_openapi3/tests"]


[tool.autoflake]
remove-all-unused-imports = true
in-place = true
recursive = true


[tool.isort]
atomic=true
force_alphabetical_sort=true
force_single_line=true
line_length=88
profile="black"


[tool.mypy]
follow_imports = "silent"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
linecount_report = "./typecov"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "openapi_core.*",
  "openapi_spec_validator.*",
  "openapi_schema_validator.*",
  "hupper.*",
  "pyramid.*",
  "pytest",
  "webob.multidict.*",
  "webtest.*",
  "zope.interface.*",

]
