[project]
name = "pyramid_openapi3"
version = "0.22.0"
description = "Pyramid addon for OpenAPI3 validation of requests and responses."
readme = "README.md"
requires-python = ">=3.11,<4"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Neyts Zupan" }, { name = "Domen Kozar" }]
keywords = ["openapi", "openapi3", "pyramid", "rest", "restful"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pyramid",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "openapi-core>=0.23.0,<0.24",
  "pyramid>=1.10.7",
]

[project.urls]
Repository = "https://github.com/Pylons/pyramid_openapi3"

[dependency-groups]
# Lower bounds keep the lowest-direct resolution (run by `make lock` to generate
# uv-oldest.lock) on working tool versions while it pins openapi-core/pyramid to
# floors.
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-instafail>=0.5",
  "pytest-randomly>=3.15",
  "pytest-socket>=0.7",
  "waitress>=3",
  "webtest>=3",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = ['if __name__ == "__main__":']

[tool.pytest.ini_options]
testpaths = ["pyramid_openapi3"]

[tool.ruff]
target-version = "py311"
exclude = [".git", ".venv"]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "ANN401",  # typing.Any disallowed in **kw
  "ARG001",  # Unused function argument
  "ARG002",  # Unused method argument
  "COM812",  # Missing trailing comma (conflicts with formatter)
  "D107",  # Missing docstring in __init__ (matches the pre-uv .flake8 config)
  "E501",  # line too long
  "EM101",  # Exception must not use string literal
  "EM102",  # Exception must not use string literal
  "ERA001",  # Found commented out code
  "FBT001",  # Boolean-typed argument
  "N818",  # Exception name should end in Error (public API name, can't rename)
  "PLR0913",  # Too many arguments (public config directives need them)
  "TD002",  # TODO comments must have an author
  "TD003",  # TODO comments must have a ticket reference
  "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "ANN002",  # Missing type annotation for *args
  "ARG001",  # Unused function argument
  "ARG005",  # Unused lambda argument (test view stubs)
  "B018",  # Useless expression (deliberate attribute access to trigger errors)
  "DTZ001",  # Naive datetime usage
  "FBT002",  # Boolean default positional argument
  "G004",  # Logging statement uses f-string
  "N802",  # Function name should be lowercase
  "N803",  # Argument name should be lowercase
  "PLC0415",  # `import` should be at the top-level of a file
  "PLR2004",  # Magic value comparisons
  "PT006",  # pytest parametrize names type
  "PT007",  # pytest parametrize values type
  "PT009",  # Use assert instead of unittest assertion (TestCase-based suite)
  "PT027",  # Use pytest.raises instead of unittest assertRaises
  "PTH118",  # os.path.join (tempfile-based tests)
  "PTH123",  # builtin open
  "RET504",  # Unnecessary assign before return
  "RUF043",  # pytest.raises match is a regex
  "S101",  # Use of `assert` detected
  "SIM117",  # Multiple with statements
  "SLF001",  # Private member accessed
  "TRY002",  # Create your own exception
]
"examples/**" = [
  "ANN001",  # Missing type annotation for argument
  "ANN201",  # Missing return type annotation
  "B904",  # raise ... from (demo brevity)
  "INP001",  # Add an `__init__.py`
  "N802",  # Function name should be lowercase
  "PLC0415",  # `import` should be at the top-level of a file
  "PLR2004",  # Magic value comparisons
  "PT009",  # Use assert instead of unittest assertion (TestCase-based examples)
  "PTH118",  # os.path.join
  "PTH120",  # os.path.dirname
  "RSE102",  # Unnecessary parens on raise
  "S101",  # Use of `assert` detected
  "S104",  # Hardcoded bind to all interfaces (demo servers)
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-single-line = true
no-sections = true
from-first = true
lines-between-types = 1

[tool.ty.rules]
# Pyramid extends Request/Response with reified attributes (registry, environ,
# matched_route, openapi_validated, ...) and ships incomplete type information,
# so ty cannot resolve them. The pre-uv mypy config silenced this via
# `ignore_missing_imports` for pyramid.*; this is the ty equivalent.
unresolved-attribute = "ignore"

[tool.uv]
# Setuptools dropped pkg_resources, but the oldest supported Pyramid (1.10.7,
# exercised by the lowest-direct CI job) still imports it at module load.
constraint-dependencies = ["setuptools<81"]
# Only consider releases at least 7 days old. Project-local so `make lock` is
# reproducible regardless of each dev's global ~/.config/uv/uv.toml.
exclude-newer = "7 days"

[tool.uv.build-backend]
module-name = "pyramid_openapi3"
module-root = ""
source-exclude = ["pyramid_openapi3/tests"]
