[metadata]
license_file = LICENSE

[bdist_wheel]
universal=1

[mypy]
follow_imports = silent
check_untyped_defs = True
html_report = ./htmltypecov
linecount_report = ./typecov

[mypy-openapi_core.*]
ignore_missing_imports = True

[mypy-openapi_spec_validator.*]
ignore_missing_imports = True

[mypy-pyramid.*]
ignore_missing_imports = True
